force-app/main/default/objects/Scheduled_Order__c/Scheduled_Order__c.object-meta.xml
<CustomObject>
    <label>Scheduled Order</label>
    <nameField>
        <displayFormat>SO-{0000000}</displayFormat>
        <label>Scheduled Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>