force-app/main/default/objects/Scheduled_Order__c/fields/Execute_At__c.field-meta.xml
<CustomField>
    <fullName>Execute_At__c</fullName>
    <label>Execute At</label>
    <type>Date</type>
</CustomField>