force-app/main/default/objects/Scheduled_Order__c/fields/First_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Execution_Date__c</fullName>
    <label>First Execution Date</label>
    <type>Date</type>
</CustomField>