force-app/main/default/objects/Scheduled_Order__c/fields/Last_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Execution_Date__c</fullName>
    <label>Last Execution Date</label>
    <type>Date</type>
</CustomField>