force-app/main/default/objects/Scheduled_Order__c/fields/Month_End_Execution__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Month End Execution</label>
    <type>Checkbox</type>
</CustomField>