force-app/main/default/objects/Scheduled_Order__c/fields/Next_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Next_Occurrence__c</fullName>
    <label>Next Occurrence</label>
    <type>Date</type>
</CustomField>