force-app/main/default/objects/Scheduled_Order__c/fields/Recipient_BIC__c.field-meta.xml
<CustomField>
    <fullName>Recipient_BIC__c</fullName>
    <label>Recipient BIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>