force-app/main/default/objects/Scheduled_Order__c/fields/Recipient_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Recipient_IBAN__c</fullName>
    <label>Recipient IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>