force-app/main/default/objects/Scheduled_Order__c/fields/Reoccurrence__c.field-meta.xml
<CustomField>
    <fullName>Reoccurrence__c</fullName>
    <label>Reoccurrence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MONTHLY</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>EVERY_SIX_MONTHS</fullName>
                <label>Every Six Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>