force-app/main/default/objects/Scheduled_Order__c/fields/Scheduled_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Transaction_Id__c</fullName>
    <label>Scheduled Transaction Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>