force-app/main/default/objects/Scheduled_Order__c/fields/Scheduled_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Transaction_Status__c</fullName>
    <label>Scheduled Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
                <label>Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>