force-app/main/default/objects/Scheduled_Order__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cents</fullName>
                <label>Cents</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>